--- a/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
+++ b/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
@@ -12,7 +12,7 @@
         <local:KundePageViewModel></local:KundePageViewModel>
     </Page.DataContext>
 
-
+    <!--#region Resources-->
     <Page.Resources>
         <Style x:Key="TextBlockStateStyle" TargetType="TextBlock">
             <Setter Property="FontSize" Value="18"/>
@@ -43,12 +43,12 @@
         <Style x:Key="TextSizingforMiddelPart" TargetType="TextBlock">
             <Setter Property="FontSize" Value="24"/>
             <Setter Property="FontWeight" Value="Bold"/>
-
         </Style>
     </Page.Resources>
+    <!--#endregion-->
 
-
-    <Grid>
+    <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="5">
+        <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
             <RowDefinition Height=".2*"/>
@@ -58,7 +58,7 @@
 
 
 
-
+        <!--#region TopPart-->
         <Grid Grid.Column="0" Grid.Row="0" BorderThickness="5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
@@ -93,8 +93,9 @@
                              Style="{StaticResource TextBoxDetailsStyle}"/>
             </StackPanel>
         </Grid>
+        <!--#endregion-->
 
-
+        <!--#region MiddelPart-->
         <Grid Grid.Column="0" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width=".5*"/>
@@ -129,9 +130,11 @@
                            HorizontalAlignment="Left"
                            Margin="10,0,0,0"/>
             </StackPanel>
-
         </Grid>
+        <!--#endregion-->
+        
 
+       
         <Grid Grid.Column="0" Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width=".5*"/>
@@ -206,6 +209,7 @@
                 </ListView>
             </StackPanel>
         </Grid>
+        
 
 
         <!--<ListView Grid.Column="0" Grid.Row="2"
@@ -223,12 +227,7 @@
 
         </ListView>-->
 
-
-
-
-
-
-        <!--Bottom Part-->
+        <!--#region BottomPart-->
         <Grid Grid.Column="0" Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"/>
@@ -258,5 +257,8 @@
 
             </StackPanel>
         </Grid>
+        <!--#endregion-->
+        
     </Grid>
+    </ScrollViewer>
 </Page>
