--- a/UpKeepProject/UpKeepProject/View/Domain/PersonaleView.xaml
+++ b/UpKeepProject/UpKeepProject/View/Domain/PersonaleView.xaml
@@ -12,7 +12,7 @@
          <local:PersonalePageViewModel></local:PersonalePageViewModel>
     </Page.DataContext>
 
-
+    <!--#region Resources-->
     <Page.Resources>
         <Style x:Key="TextBlockStateStyle" TargetType="TextBlock">
             <Setter Property="FontSize" Value="18"/>
@@ -43,223 +43,205 @@
         <Style x:Key="TextSizingforMiddelPart" TargetType="TextBlock">
             <Setter Property="FontSize" Value="24"/>
             <Setter Property="FontWeight" Value="Bold"/>
-
         </Style>
     </Page.Resources>
+    <!--#endregion-->
 
+    
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height=".75*"/>
+                <RowDefinition Height=".2*"/>
+                <RowDefinition Height="3*"/>
+                <RowDefinition Height=".5*"/>
+            </Grid.RowDefinitions>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height=".2*"/>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="1*"/>
-        </Grid.RowDefinitions>
+            <!--#region Top Part-->
+            <Grid Grid.Column="0" Grid.Row="0" BorderThickness="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
 
+                <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
+                    <TextBlock Text="Name" HorizontalAlignment="Center"
+                               Style="{StaticResource TextBlockDetailsStyle}"/>
+                    <TextBox Text="{Binding ItemDetails.Name, Mode=TwoWay}"
+                             IsHitTestVisible="{Binding EnabledStateDetails}"
+                             Background="{Binding BackgroundColorDetails}"
+                             Style="{StaticResource TextBoxDetailsStyle}"/>
+                </StackPanel>
 
+                <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
+                    <TextBlock Text="Adresse" HorizontalAlignment="Center"
+                               Style="{StaticResource TextBlockDetailsStyle}"/>
+                    <TextBox Text="{Binding ItemDetails.Adresse, Mode=TwoWay}"
+                             IsHitTestVisible="{Binding EnabledStateDetails}"
+                             Background="{Binding BackgroundColorDetails}"
+                             Style="{StaticResource TextBoxDetailsStyle}"/>
+                </StackPanel>
 
+                <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
+                    <TextBlock Text="Nummer" HorizontalAlignment="Center"
+                               Style="{StaticResource TextBlockDetailsStyle}"/>
+                    <TextBox Text="{Binding ItemDetails.Nummer, Mode=TwoWay}"
+                             IsHitTestVisible="{Binding EnabledStateDetails}"
+                             Background="{Binding BackgroundColorDetails}"
+                             Style="{StaticResource TextBoxDetailsStyle}"/>
+                </StackPanel>
+            </Grid>
+            <!--#endregion-->
 
-        <Grid Grid.Column="0" Grid.Row="0" BorderThickness="5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"/>
-                <ColumnDefinition Width="2*"/>
-                <ColumnDefinition Width="2*"/>
-            </Grid.ColumnDefinitions>
+            <!--#region Middel Part Text-->
+            <Grid Grid.Column="0" Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width=".5*"/>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="5*"/>
+                </Grid.ColumnDefinitions>
 
-            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
-                <TextBlock Text="Name" HorizontalAlignment="Center"
-                           Style="{StaticResource TextBlockDetailsStyle}"/>
-                <TextBox Text="{Binding ItemDetails.Name, Mode=TwoWay}"
-                         IsHitTestVisible="{Binding EnabledStateDetails}"
-                         Background="{Binding BackgroundColorDetails}"
-                         Style="{StaticResource TextBoxDetailsStyle}"/>
-            </StackPanel>
-
-            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
-                <TextBlock Text="Adresse" HorizontalAlignment="Center"
-                           Style="{StaticResource TextBlockDetailsStyle}"/>
-                <TextBox Text="{Binding ItemDetails.Adresse, Mode=TwoWay}"
-                         IsHitTestVisible="{Binding EnabledStateDetails}"
-                         Background="{Binding BackgroundColorDetails}"
-                         Style="{StaticResource TextBoxDetailsStyle}"/>
-            </StackPanel>
-
-            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
-                <TextBlock Text="Nummer" HorizontalAlignment="Center"
-                           Style="{StaticResource TextBlockDetailsStyle}"/>
-                <TextBox Text="{Binding ItemDetails.Nummer, Mode=TwoWay}"
-                         IsHitTestVisible="{Binding EnabledStateDetails}"
-                         Background="{Binding BackgroundColorDetails}"
-                         Style="{StaticResource TextBoxDetailsStyle}"/>
-            </StackPanel>
-        </Grid>
-
-
-        <Grid Grid.Column="0" Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width=".5*"/>
-                <ColumnDefinition Width="5*"/>
-                <ColumnDefinition Width="5*"/>
-                <ColumnDefinition Width="5*"/>
-            </Grid.ColumnDefinitions>
-
-            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
-                <TextBlock Text="ID" 
+                <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
+                    <TextBlock Text="ID" 
                            Style="{StaticResource TextSizingforMiddelPart}"
                            HorizontalAlignment="Center"/>
-            </StackPanel>
+                </StackPanel>
 
-            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
-                <TextBlock Text="Name" 
+                <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
+                    <TextBlock Text="Name" 
                            Style="{StaticResource TextSizingforMiddelPart}"
                            HorizontalAlignment="Left"
                            Margin="10,0,0,0"/>
-            </StackPanel>
+                </StackPanel>
 
-            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
-                <TextBlock Text="Adresse" 
+                <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
+                    <TextBlock Text="Adresse" 
                            Style="{StaticResource TextSizingforMiddelPart}"
                            HorizontalAlignment="Left"
                            Margin="10,0,0,0"/>
-            </StackPanel>
+                </StackPanel>
 
-            <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
-                <TextBlock Text="Nummer" 
+                <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
+                    <TextBlock Text="Nummer" 
                            Style="{StaticResource TextSizingforMiddelPart}"
                            HorizontalAlignment="Left"
                            Margin="10,0,0,0"/>
-            </StackPanel>
+                </StackPanel>
+            </Grid>
+            <!--#endregion-->
 
-        </Grid>
+            <!--#region Middel Part-->
+        <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="2">
+            <Grid Grid.Column="0" Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width=".5*"/>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="5*"/>
+                </Grid.ColumnDefinitions>
 
-        <Grid Grid.Column="0" Grid.Row="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width=".5*"/>
-                <ColumnDefinition Width="5*"/>
-                <ColumnDefinition Width="5*"/>
-                <ColumnDefinition Width="5*"/>
-            </Grid.ColumnDefinitions>
-
-            <!-- ID Data -->
-            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
-                <ListView
+                <!-- ID Data -->
+                <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
+                    <ListView
                     ItemsSource="{Binding ItemCollection}"
                     SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
                     IsEnabled="{Binding EnabledStateCollection}"
                     HorizontalAlignment="Center">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Id}" 
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Id}" 
                                        FontSize="24"
                                        >
-                            </TextBlock>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackPanel>
+                                </TextBlock>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackPanel>
 
-            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
-                <ListView
+                <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
+                    <ListView
                     ItemsSource="{Binding ItemCollection}"
                     SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
                     IsEnabled="{Binding EnabledStateCollection}"
                     HorizontalAlignment="Left">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Name}" 
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" 
                                        FontSize="24">
-                            </TextBlock>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackPanel>
+                                </TextBlock>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackPanel>
 
-            <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
-                <ListView
+                <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
+                    <ListView
                     ItemsSource="{Binding ItemCollection}"
                     SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
                     IsEnabled="{Binding EnabledStateCollection}"
                     HorizontalAlignment="Left">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Adresse}" 
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Adresse}" 
                                        FontSize="24">
-                            </TextBlock>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackPanel>
+                                </TextBlock>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackPanel>
 
-            <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
-                <ListView
+                <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
+                    <ListView
                     ItemsSource="{Binding ItemCollection}"
                     SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
                     IsEnabled="{Binding EnabledStateCollection}"
                     HorizontalAlignment="Left">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Nummer}" 
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Nummer}" 
                                        FontSize="24">
-                            </TextBlock>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackPanel>
-        </Grid>
+                                </TextBlock>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackPanel>
+            </Grid>
+        </ScrollViewer>
+        <!--#endregion-->
 
+            <!--#region Bottom Part-->
+            <Grid Grid.Column="0" Grid.Row="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
 
-        <!--<ListView Grid.Column="0" Grid.Row="2"
-                      
-                      ItemsSource="{Binding ItemCollection}"
-                      SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
-                      IsEnabled="{Binding EnabledStateCollection}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding ItemDescription2}" FontSize="24">
-                      
-                    </TextBlock>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-
-        </ListView>-->
-       
-
-
-
-
-
-                <!--Bottom Part-->
-        <Grid Grid.Column="0" Grid.Row="3">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="2*"/>
-            </Grid.ColumnDefinitions>
-
-            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Bottom">
-                <Button Command="{Binding ViewCommandsObj[0]}" 
+                <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Bottom">
+                    <Button Command="{Binding ViewCommandsObj[0]}" 
                         Content="{Binding ViewCommandsDesc[0]}"
-                        Style="{StaticResource ButtonStyle}"
-                        >
+                        Style="{StaticResource ButtonStyle}">
+                    </Button>
 
-
-                </Button>
-
-                <Button Command="{Binding ViewCommandsObj[1]}" 
+                    <Button Command="{Binding ViewCommandsObj[1]}" 
                         Content="{Binding ViewCommandsDesc[1]}"
                         Style="{StaticResource ButtonStyle}"  />
 
-                <Button Command="{Binding ViewCommandsObj[2]}" 
+                    <Button Command="{Binding ViewCommandsObj[2]}" 
                         Content="{Binding ViewCommandsDesc[2]}"
                         Style="{StaticResource ButtonStyle}" />
 
-                <TextBlock 
+                    <TextBlock 
                            VerticalAlignment="Bottom" 
                            HorizontalAlignment="Center"
                            
                            Text="{Binding ViewStateDesc}" 
                            Style="{StaticResource TextBlockStateStyle}" />
 
-            </StackPanel>
+                </StackPanel>
+            </Grid>
+            <!--#endregion-->
+
         </Grid>
-    </Grid>
+    
 </Page>
