--- a/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
+++ b/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
@@ -61,6 +61,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height=".75*"/>
             <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".2*"/>
+
             <RowDefinition Height="3*"/>
             <RowDefinition Height=".5*"/>
         </Grid.RowDefinitions>
@@ -101,9 +103,12 @@
             </StackPanel>
         </Grid>
         <!--#endregion-->
+        <Grid Grid.Column="0" Grid.Row="1">
+            <TextBox Text="{Binding FliterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" PlaceholderText="Skriv Her"  />
+        </Grid>
 
         <!--#region Middel Part Text-->
-        <Grid Grid.Column="0" Grid.Row="1">
+        <Grid Grid.Column="0" Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width=".5*"/>
                 <ColumnDefinition Width="5*"/>
@@ -141,7 +146,7 @@
         <!--#endregion-->
 
         <!--#region Middel Part-->
-        <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="2">
+        <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="3">
             <Grid Grid.Column="0" Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width=".5*"/>
@@ -150,10 +155,13 @@
                     <ColumnDefinition Width="5*"/>
                 </Grid.ColumnDefinitions>
 
+
+
                 <!-- ID Data -->
                 <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
+                   
                     <ListView
-                    ItemsSource="{Binding ItemCollection}"
+                    ItemsSource="{Binding FliterItemCollection}"
                     SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
                     IsEnabled="{Binding EnabledStateCollection}"
                     HorizontalAlignment="Center">
@@ -170,7 +178,7 @@
                 <!-- Name Data -->
                 <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
                     <ListView
-                    ItemsSource="{Binding ItemCollection}"
+                    ItemsSource="{Binding FliterItemCollection}"
                     SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
                     IsEnabled="{Binding EnabledStateCollection}"
                     HorizontalAlignment="Left">
@@ -185,7 +193,7 @@
                 <!-- Adresse Data -->
                 <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
                     <ListView
-                    ItemsSource="{Binding ItemCollection}"
+                    ItemsSource="{Binding FliterItemCollection}"
                     SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
                     IsEnabled="{Binding EnabledStateCollection}"
                     HorizontalAlignment="Left">
@@ -200,7 +208,7 @@
                 <!-- Nummer Data -->
                 <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
                     <ListView
-                    ItemsSource="{Binding ItemCollection}"
+                    ItemsSource="{Binding FliterItemCollection}"
                     SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
                     IsEnabled="{Binding EnabledStateCollection}"
                     HorizontalAlignment="Left">
@@ -216,7 +224,7 @@
         <!--#endregion-->
 
         <!--#region Bottom Part-->
-        <Grid Grid.Column="0" Grid.Row="3">
+        <Grid Grid.Column="0" Grid.Row="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="2*"/>
