--- a/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
+++ b/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
@@ -60,10 +60,10 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height=".75*"/>
-            <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".3*"/>
             <RowDefinition Height=".2*"/>
 
-            <RowDefinition Height="3*"/>
+            <RowDefinition Height="2.9*"/>
             <RowDefinition Height=".5*"/>
         </Grid.RowDefinitions>
 
@@ -106,8 +106,20 @@
 
 
         <Grid Grid.Column="0" Grid.Row="1">
-            <TextBox Text="{Binding FliterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                     PlaceholderText="Skriv Her"  />
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="1" Grid.Row="0">
+                <TextBox Text="{Binding FliterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                         PlaceholderText="Søg" 
+                         MinWidth="200"
+                         TextAlignment="Left" 
+                         Height="40" Width="120"
+                         FontSize="22"
+                         Margin="60,5,0,0"
+                />
+            </StackPanel>
         </Grid>
 
         <!--#region Middel Part Text-->
