--- a/UpKeepProject/UpKeepProject/View/Domain/PersonaleView.xaml
+++ b/UpKeepProject/UpKeepProject/View/Domain/PersonaleView.xaml
@@ -61,7 +61,7 @@
             <RowDefinition Height=".3*"/>
             <RowDefinition Height=".2*"/>
 
-            <RowDefinition Height="3*"/>
+            <RowDefinition Height="2.9*"/>
             <RowDefinition Height=".5*"/>
         </Grid.RowDefinitions>
 
@@ -104,15 +104,20 @@
 
 
         <Grid Grid.Column="0" Grid.Row="1">
-            
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="1" Grid.Row="0">
                 <TextBox Text="{Binding FliterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                         PlaceholderText="Søg"  Margin="1300,10,10,10" 
+                         PlaceholderText="Søg" 
+                         MinWidth="200"
                          TextAlignment="Left" 
-                         Height="43" Width="120"
-                         FontSize="22"/>
+                         Height="40" Width="120"
+                         FontSize="22"
+                         Margin="60,5,0,0"
+                         />
             </StackPanel>
-
         </Grid>
 
         <!--#region Middel Part Text-->
