--- a/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
+++ b/UpKeepProject/UpKeepProject/View/Domain/KundeView.xaml
@@ -104,7 +104,7 @@
         </Grid>
         <!--#endregion-->
 
-
+        <!--#region Søgefunktion-->
         <Grid Grid.Column="0" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
@@ -112,7 +112,7 @@
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="1" Grid.Row="0">
                 <TextBox Text="{Binding FliterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                         PlaceholderText="Søg" 
+                         PlaceholderText="Søg på navn" 
                          MinWidth="200"
                          TextAlignment="Left" 
                          Height="40" Width="120"
@@ -121,6 +121,7 @@
                 />
             </StackPanel>
         </Grid>
+        <!--#endregion-->
 
         <!--#region Middel Part Text-->
         <Grid Grid.Column="0" Grid.Row="2">
@@ -176,7 +177,7 @@
                 <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
                    
                     <ListView
-                    ItemsSource="{Binding FliterItemCollection}"
+                    ItemsSource="{Binding ItemCollection}"
                     SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
                     IsEnabled="{Binding EnabledStateCollection}"
                     HorizontalAlignment="Center">
@@ -193,7 +194,7 @@
                 <!-- Name Data -->
                 <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
                     <ListView
-                    ItemsSource="{Binding FliterItemCollection}"
+                    ItemsSource="{Binding ItemCollection}"
                     SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
                     IsEnabled="{Binding EnabledStateCollection}"
                     HorizontalAlignment="Left">
@@ -208,7 +209,7 @@
                 <!-- Adresse Data -->
                 <StackPanel Grid.Column="2" Grid.Row="0" Orientation="Vertical">
                     <ListView
-                    ItemsSource="{Binding FliterItemCollection}"
+                    ItemsSource="{Binding ItemCollection}"
                     SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
                     IsEnabled="{Binding EnabledStateCollection}"
                     HorizontalAlignment="Left">
@@ -223,7 +224,7 @@
                 <!-- Nummer Data -->
                 <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Vertical">
                     <ListView
-                    ItemsSource="{Binding FliterItemCollection}"
+                    ItemsSource="{Binding ItemCollection}"
                     SelectedItem="{Binding ItemSelected, Mode=TwoWay}"
                     IsEnabled="{Binding EnabledStateCollection}"
                     HorizontalAlignment="Left">
